Fixing spacing issues

--- a/Main.css
+++ b/Main.css
@@ -48,7 +48,7 @@ th, td {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 380px; 
+    height: 100%; /* 380px */
     width: auto; 
     box-sizing: border-box; 
     justify-content: center; 
@@ -63,9 +63,7 @@ th, td {
 
 .button:hover {
     border: 4px solid #000000; 
-    height: 430px
 }
-
   
   
   
